# EMCC.Library

./: .gitignore  CLAUDE.md  CODEX_LIBRARIAN.md  Cheatsheet.md  Index.md  MIGRATION-ISSUES.md  Obsidian-Setup-Guide.md  PROJECT_WIKI_BUILD_SPEC.md  README.md  REORGANIZATION-INSTRUCTIONS.md  SOURCE-HISTORY.md  bootstrap.py  codex-build-plan.html  module.json  pyproject.toml  reorganization-instructions.library.md
0-Inbox/: 2026-07-21-librarian-marketing-extension-proposal.md
0. Inbox/: codex-wiki-folder-org-principle.md
_config/: concept_coverage.yaml  forbidden_terms.yaml  steel_threads.yaml
_scripts/: check_canon_consistency.py  check_cross_refs.py  cross_link_topics.py  delta_source_docs.py  steel_thread_tracker.py  sync_from_kit.py  validate_terminology.py  validate_topic_registry.py
_template/: 00-Start-Here__SEP__How-to-Use-This-Wiki.md  00-Start-Here__SEP__Project-Overview.md  00-Start-Here__SEP__Terminology-Rules.md  Home.md  _brain_dump__SEP__README.md  _canon__SEP__taxonomy.yaml  _canon__SEP__timeline.yaml  _canon__SEP__topics.yaml  _confidential__SEP__Confidential_Profile.md  _context__SEP__CLAUDE_CONTEXT_RULES.md  _context__SEP__CODEX_LIBRARIAN.md  _context__SEP__SEMANTIC_LINT_PROCEDURE.md  _decisions__SEP__README.md  _decisions__SEP__ingest-log.md  _inbox__SEP__README.md  _sources__SEP__README.md
patterns/: AI-Memory-And-Insight-Extraction.md  Decision-Scoring.md  Neurodivergent-First-UX.md  Offline-First-Sync.md  Opportunistic-Bundling.md  README.md  Soft-Delete-Signal-Preservation.md
scripts/: VENDORED-FROM-EMCC.md  orchestrator_log.py  render_board.py  task_driver.py  task_state.py
tasks/: archive.md  (+6 more)
(+300 files in other folders)
